--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="667718253087-qeek1sjq841eo473bi8sqq64evqo16ss.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png">
     <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/logo.png">
