--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <meta name="theme-color" content="#000000">
     <meta name="google-signin-scope" content="profile email">
     <meta name="google-signin-client_id" content="667718253087-qeek1sjq841eo473bi8sqq64evqo16ss.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-
+    <script src="https://apis.google.com/js/platform.js" async defer>   </script>
     <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png">
     <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/logo.png">
 
@@ -17,7 +16,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='//fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
     <link href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet">
-    
+   
 
 </head>
 
@@ -28,7 +27,30 @@
     <div id="root">
 
     </div>
-
+    <!-- <script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
+   <script>
+    window.onLoadCallback = function(){
+        gapi.auth2.init({
+            client_id: '667718253087-qeek1sjq841eo473bi8sqq64evqo16ss.apps.googleusercontent.com'
+          });
+      }
+    </script> -->
+    <!-- <script>
+    function onSignIn(googleUser) {
+        // Useful data for your client-side scripts:
+        var profile = googleUser.getBasicProfile();
+        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+        console.log('Full Name: ' + profile.getName());
+        console.log('Given Name: ' + profile.getGivenName());
+        console.log('Family Name: ' + profile.getFamilyName());
+        console.log("Image URL: " + profile.getImageUrl());
+        console.log("Email: " + profile.getEmail());
+    
+        // The ID token you need to pass to your backend:
+        var id_token = googleUser.getAuthResponse().id_token;
+        console.log("ID Token: " + id_token);
+    }; 
+    </script> -->
 </body>
 
 </html>
