restyle dashboard registration

--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
 
     <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.16/b-1.5.1/b-colvis-1.5.1/b-flash-1.5.1/b-html5-1.5.1/sl-1.2.5/datatables.min.js"></script>
 
-    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/logo.png">
+    <link rel="shortcut icon" sizes="76x76" href="%PUBLIC_URL%/logo.ico">
+    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/logo.ico">
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.1.2/css/buttons.dataTables.min.css" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href='//fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,700,300|PT+Sans' rel='stylesheet' type='text/css'>
     <link href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet">
     <link href="https://cdn.datatables.net/scroller/1.4.4/css/scroller.dataTables.min.css" rel="stylesheet"
-
+    <link href='https://fonts.googleapis.com/css?family=' rel='stylesheet'>
 </head>
 
 <body>
